// Source:
// https://github.com/OpenNMS/opennms/blob/opennms-26.0.0-1/core/ipc/rpc/kafka/src/main/proto/kafka-rpc.proto
// Changes:
// - Java Package changed

syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.opennms.core.ipc.grpc.common";
option java_outer_classname = "RpcProto";

message RpcMessageProto {
    string rpc_id = 1;
    bytes rpc_content = 2;
    string system_id = 3;
    uint64 expiration_time = 4;
    int32 current_chunk_number = 5;
    int32 total_chunks = 6;
    map<string, string> tracing_info = 7;
    string module_id = 8;
}
